# rocotoviewer

./: .gitignore  404.html  AGENTS.md  LICENSE  MANIFEST.in  README.md  __init__.py  __version__.py  cli.py  example_workflow.db  example_workflow.xml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  verify_tui.py  verify_tui_advanced.py
.github/workflows/: ci.yml  python-package.yml
config/: __init__.py  config.py  settings.py
core/: __init__.py  benchmark_log_processor.py  event_bus.py  file_monitor.py  log_processor.py  models.py  state_manager.py
core/commands/: config_cmd.py  monitor.py  parse.py  stats.py  view.py
docs/: api.md  example_workflow.db  example_workflow.xml  getting-started.md  index.md  installation.md  reference.md  tutorial.md  usage.md  user-guide.md
docs/scripts/: generate_tutorial_assets.py  setup_example_db.py
examples/: example_workflow.xml  legacy_workflow.xml  sample_config.yaml
getting-started/: index.html
parsers/: __init__.py  base_parser.py  benchmark_workflow_parser.py  log_parser.py  task_parser.py  test_workflow_parser.py  workflow_parser.py
reference/: index.html
rocotoviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: generate_tutorial_assets.py  setup_example_db.py  verify_tui.py  verify_tui_advanced.py
search/: search_index.json
src/rocototop/: _version.py  app.py
src/rocotoviewer/: app.py  cli.py  parser.py
tests/: __init__.py  conftest.py  mock_rocoto.db  mock_rocoto_advanced.db  mock_workflow.xml  mock_workflow_advanced.xml  test_actions.py  test_app.py  test_app_actions.py  test_app_advanced.py  test_backward_compatibility.py  test_cli.py  test_cli_errors.py  test_core.py  test_integration.py  test_log_tailing.py  test_log_viewer.py  test_metatask.py  test_parser.py  test_parser_advanced.py  test_parser_edge.py  test_parser_entities.py  test_parser_fixes.py  test_parser_io.py  test_parser_proptest.py  test_parsers.py  test_performance.py  test_pulse.py  test_refresh_bug.py  test_status_bar.py  test_tree_behavior.py  test_ui.py  test_ui_enhancements.py  test_ui_screens.py  test_version.py  ux_workflow.xml
tutorial/: index.html
ui/: __init__.py  app.py
ui/screens/: __init__.py  log_viewer_screen.py  main_screen.py
ui/themes/: __init__.py  default.py
ui/widgets/: __init__.py  log_viewer.py  navigation_panel.py  search_filter.py  workflow_viewer.py
user-guide/: index.html
utils/: __init__.py  compatibility_utils.py  dependency_visualization.py  file_utils.py  formatting.py  log_setup.py  performance_utils.py  search_utils.py  status_visualization.py  time_utils.py
