# .. note:: warning: "If you modify features, API, or usage, you MUST update the documentation immediately."

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rocototop"
dynamic = ["version"]
description = "A Textual interface to Rocoto workflows"
authors = [
    { name = "Barry Baker" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "textual",
    "rich",
    "aiosqlite",
    "aiofiles",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis",
    "pip-tools",
    "setuptools-scm",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
rocototop = "rocototop.cli:main"

[tool.setuptools_scm]
write_to = "src/rocototop/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 132
src = ["src"]
extend-exclude = ["src/rocototop/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
